--- a/KadaiA/index.html
+++ b/KadaiA/index.html
@@ -52,6 +52,6 @@
     </div>
     <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
     <p class="story"></p>
-    <script src="main.js"></script>
+    <script src="main.js" charset="shift_jis"></script>
   </body>
 </html>
